# neatlogs

./: .gitignore  RAINDROP_VS_NEATLOGS.md  README.MD  SDK_V2_IMPLEMENTATION.md  THREE_LEVELS_OF_CONTROL.md  check_openai_http.py  pyproject.toml  pytest.ini  test.py  test_ai_agents_complete.py  test_crewai_tools.py  test_http_instrumentation.sh  test_http_only.py  test_langchain_rag.py  test_langchain_rag_embeddings.py  test_langchain_tools.py  test_mcp_tools.py  test_simple_workflow.py  test_three_levels_control.py  test_workflow.py
.github/workflows/: ci.yml
documentation/: prompt-structure.md
examples/: anthropic.py  azure_langchain_dedup_test.py  azure_openai.py  azure_openai_agents.py  crewai_example.py  example.jsonc  framework_variable_testing.py  google_genai.py  langchain_agentic_example.py  langchain_example.py  langgraph_example.py  llm_variable_testing.py  openai_agents.py  openai_sdk.py  simple_crewai_tool.py  simple_langchain_tool.py  test_pricing_azure_e2e.py
examples/gobblecube/: .env.example  README.md  agent_ads.py  agent_analytics.py  agent_inventory.py  agent_market_intel.py  config.py  error_injection.py  main.py  requirements.txt  supervisor.py
examples/marketing_strategy_demo/: .env.example  README.md  main.py  task.py
examples/sdk_examples/: 47_all_span_kinds.py  49_langgraph_gemini_qdrant_cohere_reranker.py  49_requirements.txt  50_multi_agent_iterative_research.py  50_requirements.txt  51_milvus_vector_search.py  51_requirements.txt  README.md  agno_basic.py  azure_openai_basic.py  bedrock_basic.py  crewai_basic.py  dspy_basic.py  end_user_filter_test.py  hermes_agent_basic.py  langchain_basic.py  openai_agents_basic.py  openai_basic.py  openrouter_basic.py  pydantic_ai_basic.py  shared_mcp_server.py  vertex_ai_basic.py
examples/sdk_examples/anthropic_multiagent/: .env.example  agents.py  main.py  requirements.txt
examples/sdk_examples/detection_demo/: .env.example  SETUP.md  config.py  main.py  requirements.txt
examples/sdk_examples/gobblecube/: .env.example  AGENT_GUIDE.md  GobbleCube Agent Architecture.md  README.md  agent_analytics.py  agent_inventory.py  config.py  main.py  requirements.txt  supervisor.py
examples/sdk_examples/google_genai_multiagent/: .env.example  agents.py  main.py  requirements.txt
examples/sdk_examples/langchain_react/: .env.example  react_agent.py  requirements.txt
examples/sdk_examples/langgraph_multiagent/: .env.example  agents.py  graph.py  main.py  requirements.txt  state.py  tools.py
logs/: azure_openai_agent.jsonl  azure_openai_sdk.jsonl  crewai.json  crewai.jsonl  google_genai.jsonl  langchain.jsonl  langgraph.jsonc  openai.jsonl
neatlogs/: __init__.py  _wrap_utils.py  agno.py  anthropic.py  azure_openai.py  bedrock.py  core.py  crewai.py  dspy.py  google_adk.py  google_genai.py  hermes.py  init.py  langchain.py  openai.py  openai_agents.py  openrouter.py  pydantic_ai.py  strands.py  version.py  vertex_ai.py
neatlogs/config/: __init__.py  attribute-mapping.json  attribute_mapper.py  client.py  defaults_enricher.py  model_defaults.json  pricing.json
neatlogs/core/: __init__.py  attribute_processor.py  context.py  crewai_task_registry.py  end_user.py  exporter.py  instrumentation_scope_parser.py  llm_binder.py  log.py  log_exporter.py  logger.py  mask.py  metrics_correlation.py  span_processor.py
neatlogs/decorators/: __init__.py  _base.py  mcp_tool.py  orchestration.py
neatlogs/event_handlers/: anthropic.py  google_genai.py  litellm.py
neatlogs/examples/: 49_langgraph_gemini_qdrant_cohere_reranker.py  50_multi_agent_iterative_research.py  50_single_file_multi_agent_stress_test.py  51_cross_file_multi_agent_stress_test.py  52_parallel_async_agents_stress_test.py  53_multi_workflow_no_wrapper.py  54_multi_workflow_with_wrapper.py  55_different_workflows_with_wrapper.py  56_same_trace_name_separate_blocks.py  60_crewai_gemini_qdrant.py  61_langchain_openai_chroma.py  62_langgraph_openai_qdrant_reranker.py  63_detection_test_workflow.py
neatlogs/instrumentation/: _guardrail_ctx.py  http_context_propagation.py  manager.py  registry.py
neatlogs/mcp/: __init__.py  buffer.py  client.py  context.py  crewai.py  langchain.py  providers.py
neatlogs/otel/: processor.py
neatlogs/prompt/: __init__.py  capture.py  client.py  decorators.py  template.py
neatlogs/span_kinds/: __init__.py  mapping.py
neatlogs/utils/: __init__.py
python_sdk_new/neatlogs/: MANIFEST.in  README.MD  parse_trace_tree.py  pyproject.toml
scripts/: sync_pricing.py
skills/neatlogs/: SKILL.md
tests/: README.md  TEST_ANALYSIS_README.md  conftest.py  test_agno_instrumentation.py  test_anthropic_instrumentation.py  test_crewai_instrumentation.py  test_dspy_instrumentation.py  test_gemini_instrumentation.py  test_google_adk_instrumentation.py  test_langchain_instrumentation.py  test_litellm_instrumentation.py  test_llamaindex_instrumentation.py  test_openai_agents_instrumentation.py  test_openai_instrumentation.py
tests/integration/: test_agno_instrumentation.py  test_anthropic_instrumentation.py  test_azure_openai_instrumentation.py  test_bedrock_instrumentation.py  test_crewai_instrumentation.py  test_dspy_instrumentation.py  test_gemini_instrumentation.py  test_google_adk_instrumentation.py  test_hermes_instrumentation.py  test_langchain_instrumentation.py  test_litellm_instrumentation.py  test_openai_agents_instrumentation.py  test_openai_instrumentation.py  test_openrouter_instrumentation.py  test_vertex_ai_instrumentation.py  test_wrapper_hierarchy_live.py
tests/manual/: README.md  test_async_flush.py  test_async_trace.py  test_fastapi_lifespan_zero_span_repro.py  test_http_zero_span_repro.py  test_litellm.py  test_manual_llm_span.py  test_pii_masking.py
tests/unit/: test_attribute_processor_intermediate_steps.py  test_code_params_capture.py  test_config_client.py  test_disable_export_flag.py  test_exporter_disable_export_behavior.py  test_log_filter.py  test_package_version.py  test_pricing_logic.py  test_span_dedup_azure.py  test_unified_attribute_processor_pipeline.py
tools/: dev_server.py
(+172 files in other folders)
