[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neatlogs"
version = "1.1.7"
description = "A Python package for extracting and managing LLM logs to build a collaborative workspace"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neatlogs", email = "hello@neatlogs.com"}
]
keywords = ["llm", "tracking", "monitoring", "logging", "ai", "machine-learning", "observability", "collboration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "openinference-instrumentation>=0.1.27",
    "openinference-semantic-conventions>=0.1.13",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "requests>=2.31.0",
    "agnost (>=0.1.8,<0.2.0)",
    # HTTP instrumentation (optional, will try to import if available)
    "opentelemetry-instrumentation-requests>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.50b0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
    "openinference-instrumentation-openai>=0.1.32",
]
langchain = [
    "chromadb>=1.1.1",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.3",
    "openinference-instrumentation-langchain>=0.1.56",
]
langgraph = [
    "langgraph>=1.0.4",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.3",
    "openinference-instrumentation-langchain>=0.1.0",
]
crewai = [
    "crewai[azure-ai-inference]==1.5.0",
    "litellm>=1.80.11",
    "openinference-instrumentation-crewai>=0.1.17",
]
llama-index = [
    "llama-index>=0.14.10",
    "openinference-instrumentation-llama-index>=4.3.9",
]
google-adk = [
    "google-adk>=1.14.1",
    "openinference-instrumentation-google-adk>=0.1.8",
]
anthropic = [
    "anthropic>=0.75.0",
    "openinference-instrumentation-anthropic>=0.1.20",
]
groq = [
    "groq>=0.37.1",
    "openinference-instrumentation-groq>=0.1.12",
]
agno = [
    "agno>=2.3.13",
    "openinference-instrumentation-agno>=0.1.25",
]
bedrock = [
    "boto3>=1.42.11",
    "openinference-instrumentation-bedrock>=0.1.32",
]
dspy = [
    "dspy>=2.6.13",
    "openinference-instrumentation-dspy>=0.1.32",
]
guardrails = [
    "openinference-instrumentation-guardrails>=0.1.10",
]
haystack = [
    "openinference-instrumentation-haystack>=0.1.29",
]
instructor = [
    "openinference-instrumentation-instructor>=0.1.12",
]
mcp = [
    "openinference-instrumentation-mcp>=1.3.3",
]
mistralai = [
    "openinference-instrumentation-mistralai>=1.3.4",
]
portkey = [
    "openinference-instrumentation-portkey>=0.1.7",
]
pydantic-ai = [
    "openinference-instrumentation-pydantic-ai>=0.1.9",
]
smolagents = [
    "openinference-instrumentation-smolagents>=0.1.21",
]
vertexai = [
    "openinference-instrumentation-vertexai>=0.1.11",
]
autogen-agentchat = [
    "openinference-instrumentation-autogen-agentchat>=0.1.6",
]
litellm = [
    "litellm>=1.80.11",
    "openinference-instrumentation-litellm>=0.1.28",
]
google-genai = [
    "google-genai>=1.55.0",
    "openinference-instrumentation-google-genai>=0.1.8",
]
openai-agents = [
    "openai>=1.0.0",
    "openai-agents>=0.6.5",
    "openinference-instrumentation-openai-agents>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/NeatLogs/neatlogs"
Repository = "https://github.com/NeatLogs/neatlogs.git"
Issues = "https://github.com/NeatLogs/neatlogs/issues"
Documentation = "https://docs.neatlogs.com/"

[tool.setuptools.packages.find]
where = ["."]
include = ["neatlogs"]

[dependency-groups]
dev = [
    "aiohttp>=3.9.0",
    "fastapi[standard]>=0.124.0",
    "opentelemetry-proto>=1.33.1",
    "protobuf>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.10.0",
    "python-dotenv>=1.0.0",
    "respx>=0.20.0",
]
