[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "neatlogs"
version = "1.2.9"
description = "A Python package for extracting and managing LLM logs to build a collaborative workspace"
readme = "README.MD"
license = "MIT"
authors = ["Neatlogs <hello@neatlogs.com>"]
homepage = "https://github.com/NeatLogs/neatlogs"
repository = "https://github.com/NeatLogs/neatlogs.git"
documentation = "https://docs.neatlogs.com/"
exclude = [
    "neatlogs/examples/**",
    "neatlogs/**/venv/**",
    "neatlogs/**/.venv/**",
    "neatlogs/**/cenv/**",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
openinference-instrumentation = ">=0.1.27"
openinference-semantic-conventions = ">=0.1.13"
opentelemetry-api = ">=1.33.1"
opentelemetry-exporter-otlp-proto-http = ">=1.33.1"
opentelemetry-sdk = ">=1.33.1"
requests = ">=2.31.0"
agnost = ">=0.1.8,<0.2.0"
opentelemetry-instrumentation = ">=0.50b0"
opentelemetry-instrumentation-requests = ">=0.50b0"
opentelemetry-instrumentation-httpx = ">=0.50b0"
opentelemetry-instrumentation-urllib3 = ">=0.50b0"
opentelemetry-instrumentation-aiohttp-client = ">=0.50b0"
opentelemetry-instrumentation-threading = ">=0.50b0"
opentelemetry-instrumentation-logging = ">=0.50b0"
wrapt = ">=1.0.0"
httpx = ">=0.27.0"
aiohttp = ">=3.9.0"
# OpenInference instrumentation adapters — lightweight, do not pull in underlying LLM libs
openinference-instrumentation-openai = ">=0.1.32"
openinference-instrumentation-anthropic = ">=0.1.20"
openinference-instrumentation-langchain = ">=0.1.56"
openinference-instrumentation-groq = ">=0.1.12"
openinference-instrumentation-litellm = ">=0.1.28"
openinference-instrumentation-google-genai = ">=0.1.8"
openinference-instrumentation-bedrock = ">=0.1.32"
openinference-instrumentation-vertexai = ">=0.1.11"
openinference-instrumentation-mistralai = ">=1.3.4"
openinference-instrumentation-crewai = ">=0.1.17"
openinference-instrumentation-dspy = ">=0.1.32"
openinference-instrumentation-agno = ">=0.1.25"
openinference-instrumentation-openai-agents = ">=1.4.0"
openinference-instrumentation-pydantic-ai = ">=0.1.9"
openinference-instrumentation-smolagents = ">=0.1.21"
openinference-instrumentation-guardrails = ">=0.1.10"
openinference-instrumentation-haystack = ">=0.1.29"
openinference-instrumentation-instructor = ">=0.1.12"
openinference-instrumentation-mcp = ">=1.3.3"
openinference-instrumentation-portkey = ">=0.1.7"
openinference-instrumentation-google-adk = ">=0.1.8"
openinference-instrumentation-autogen-agentchat = ">=0.1.6"
openinference-instrumentation-llama-index = ">=4.3.9"
# Optional extras — underlying heavy libraries
neatlogs-instrumentations = { version = ">=0.1.1", extras = ["azure-ai-inference"], optional = true }
openai = { version = ">=1.0.0", optional = true }
anthropic = { version = ">=0.75.0", optional = true }
langchain = { version = ">=1.1.2", optional = true }
langchain-classic = { version = ">=1.0.0", optional = true }
langchain-community = { version = ">=0.4.1", optional = true }
langchain-core = { version = ">=0.3.0", optional = true }
langchain-openai = { version = ">=1.1.3", optional = true }
chromadb = { version = ">=1.1.1", optional = true }
qdrant-client = { version = "<1.16", optional = true }
langgraph = { version = ">=1.0.4", optional = true }
crewai = { version = ">=1.9.3", extras = ["azure-ai-inference"], optional = true }
litellm = { version = ">=1.80.11", optional = true }
llama-index = { version = ">=0.14.10", optional = true }
google-adk = { version = ">=1.14.1", optional = true }
groq = { version = ">=0.37.1", optional = true }
agno = { version = ">=2.3.13", optional = true }
boto3 = { version = ">=1.42.11", optional = true }
dspy = { version = ">=2.6.13", optional = true }
google-genai = { version = ">=1.55.0", optional = true }
openai-agents = { version = ">=0.6.5", optional = true }
guardrails-ai = { version = ">=0.4.0", optional = true }
haystack-ai = { version = ">=2.0.0", optional = true }
instructor = { version = ">=1.0.0", optional = true }
mcp = { version = ">=1.0.0", optional = true }
mistralai = { version = ">=1.0.0", optional = true }
portkey-ai = { version = ">=1.0.0", optional = true }
pydantic-ai = { version = ">=0.0.9", optional = true }
smolagents = { version = ">=1.0.0", optional = true }
google-cloud-aiplatform = { version = ">=1.38.0", optional = true }
autogen-agentchat = { version = ">=0.4.0", optional = true }
pymilvus = { version = ">=2.4.0,<2.5.0", optional = true }
milvus-lite = { version = ">=2.4.0,<2.5.0", optional = true }

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0"
fastapi = { version = ">=0.124.0", extras = ["standard"] }
isort = ">=5.13.0"
opentelemetry-proto = ">=1.33.1"
protobuf = ">=4.0.0"
pytest = ">=7.0.0"
pytest-asyncio = ">=1.3.0"
pytest-mock = ">=3.10.0"
python-dotenv = ">=1.0.0"
respx = ">=0.20.0"

[tool.poetry.extras]
azure-ai-inference = ["neatlogs-instrumentations"]
openai = ["openai"]
anthropic = ["anthropic"]
langchain = ["langchain", "langchain-classic", "langchain-community", "langchain-core", "langchain-openai", "chromadb", "qdrant-client"]
langgraph = ["langgraph", "langchain-core", "langchain-openai"]
crewai = ["crewai", "litellm"]
llama-index = ["llama-index"]
google-adk = ["google-adk"]
groq = ["groq"]
agno = ["agno"]
bedrock = ["boto3"]
dspy = ["dspy"]
litellm = ["litellm"]
google-genai = ["google-genai"]
openai-agents = ["openai", "openai-agents"]
guardrails = ["guardrails-ai"]
haystack = ["haystack-ai"]
instructor = ["instructor"]
mcp = ["mcp"]
mistralai = ["mistralai"]
portkey = ["portkey-ai"]
pydantic-ai = ["pydantic-ai"]
smolagents = ["smolagents"]
vertexai = ["google-cloud-aiplatform"]
autogen-agentchat = ["autogen-agentchat"]
milvus = ["pymilvus", "milvus-lite"]

[project]
name = "neatlogs"
version = "1.2.9"
description = "A Python package for extracting and managing LLM logs to build a collaborative workspace"
readme = "README.MD"
license = {text = "MIT"}
authors = [
    {name = "Neatlogs", email = "hello@neatlogs.com"}
]
keywords = ["llm", "tracking", "monitoring", "logging", "ai", "machine-learning", "observability", "collaboration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "openinference-instrumentation>=0.1.27",
    "openinference-semantic-conventions>=0.1.13",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "requests>=2.31.0",
    "agnost>=0.1.8,<0.2.0",
    "opentelemetry-instrumentation>=0.50b0",
    "opentelemetry-instrumentation-requests>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-urllib3>=0.50b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.50b0",
    "opentelemetry-instrumentation-threading>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "wrapt>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # OpenInference instrumentation adapters — lightweight, do not pull in underlying LLM libs.
    # Pre-installed so neatlogs auto-instruments any supported library the user already has.
    "openinference-instrumentation-openai>=0.1.32",
    "openinference-instrumentation-anthropic>=0.1.20",
    "openinference-instrumentation-langchain>=0.1.56",
    "openinference-instrumentation-groq>=0.1.12",
    "openinference-instrumentation-litellm>=0.1.28",
    "openinference-instrumentation-google-genai>=0.1.8",
    "openinference-instrumentation-bedrock>=0.1.32",
    "openinference-instrumentation-vertexai>=0.1.11",
    "openinference-instrumentation-mistralai>=1.3.4",
    "openinference-instrumentation-crewai>=0.1.17",
    "openinference-instrumentation-dspy>=0.1.32",
    "openinference-instrumentation-agno>=0.1.25",
    "openinference-instrumentation-openai-agents>=1.4.0",
    "openinference-instrumentation-pydantic-ai>=0.1.9",
    "openinference-instrumentation-smolagents>=0.1.21",
    "openinference-instrumentation-guardrails>=0.1.10",
    "openinference-instrumentation-haystack>=0.1.29",
    "openinference-instrumentation-instructor>=0.1.12",
    "openinference-instrumentation-mcp>=1.3.3",
    "openinference-instrumentation-portkey>=0.1.7",
    "openinference-instrumentation-google-adk>=0.1.8",
    "openinference-instrumentation-autogen-agentchat>=0.1.6",
    "openinference-instrumentation-llama-index>=4.3.9",
]

[project.optional-dependencies]
# Each extra installs only the heavy underlying library.
# All openinference-instrumentation-* adapters are in base deps — no need to list them here.
azure-ai-inference = [
    "neatlogs-instrumentations[azure-ai-inference]>=0.1.1",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.75.0",
]
langchain = [
    "chromadb>=1.1.1",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.3",
    # langchain-community's Qdrant vectorstore uses `QdrantClient.search(...)` which was
    # replaced by `query_points(...)` in qdrant-client>=1.16. Pin to a compatible client.
    "qdrant-client<1.16",
]
langgraph = [
    "langgraph>=1.0.4",
    "langchain-core>=0.3.0",
    "langchain-openai>=1.1.3",
]
crewai = [
    "crewai[azure-ai-inference]>=1.9.3",
    "litellm>=1.80.11",
]
llama-index = [
    "llama-index>=0.14.10",
]
google-adk = [
    "google-adk>=1.14.1",
]
groq = [
    "groq>=0.37.1",
]
agno = [
    "agno>=2.3.13",
]
bedrock = [
    "boto3>=1.42.11",
]
dspy = [
    "dspy>=2.6.13",
]
litellm = [
    "litellm>=1.80.11",
]
google-genai = [
    "google-genai>=1.55.0",
]
openai-agents = [
    "openai>=1.0.0",
    "openai-agents>=0.6.5",
]
guardrails = [
    "guardrails-ai>=0.4.0",
]
haystack = [
    "haystack-ai>=2.0.0",
]
instructor = [
    "instructor>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
mistralai = [
    "mistralai>=1.0.0",
]
portkey = [
    "portkey-ai>=1.0.0",
]
pydantic-ai = [
    "pydantic-ai>=0.0.9",
]
smolagents = [
    "smolagents>=1.0.0",
]
vertexai = [
    "google-cloud-aiplatform>=1.38.0",
]
autogen-agentchat = [
    "autogen-agentchat>=0.4.0",
]
milvus = [
    # pymilvus and milvus-lite must be the same minor version to avoid a gRPC hang
    "pymilvus>=2.4.0,<2.5.0",
    "milvus-lite>=2.4.0,<2.5.0",
]

[project.urls]
Homepage = "https://github.com/NeatLogs/neatlogs"
Repository = "https://github.com/NeatLogs/neatlogs.git"
Issues = "https://github.com/NeatLogs/neatlogs/issues"
Documentation = "https://docs.neatlogs.com/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["neatlogs", "neatlogs.*"]
exclude = [
    "neatlogs.examples",
    "neatlogs.examples.*",
]

[tool.setuptools.package-data]
neatlogs = [
    "config/*.json",
]

[tool.setuptools.exclude-package-data]
neatlogs = [
    "examples",
    "examples/*",
    "examples/**/*",
]

[dependency-groups]
dev = [
    "aiohttp>=3.9.0",
    "fastapi[standard]>=0.124.0",
    "opentelemetry-proto>=1.33.1",
    "protobuf>=4.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.10.0",
    "python-dotenv>=1.0.0",
    "respx>=0.20.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = """
(
  /\\.venv/
)
"""

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv"]
